<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Text Resources -->
	
	<!--  Tab Labels -->
    <string-array name="tab_labels">
        <item>Search</item>
        <item>My Stocks</item>
        <item>Account</item>
    </string-array>

    <!-- General -->
    <string name="app_name">Stock Trader</string>
    <string name="action_settings">Settings</string>

    <!-- User Signup page -->
    <string name="signup_username">Username&#8230;</string>
    <string name="signup_starting_cash">Starting Cash&#8230;</string>
    <string name="signup_setup_complete">Done</string>

    <!-- Error Messages -->
    <string name="empty_search_alert">Please Enter a Valid Stock Symbol</string>
    <string name="invalid_search_alert">Please Enter a Valid Stock Symbol</string>
	<string name="no_search_results">No Search Results Found</string>
	 
    <!-- SearchStockFragment -->
    <string name="stock_search_bar_hint">Find Stocks &#8230;</string>
    <string name="news_not_found">No Recent News</string>

    <!-- Card -->
    <string name="card_stock_name"></string>
    <string name="card_stock_symbol"></string>
    <string name="card_stock_exchange"></string>
    <string name="card_stock_last_trade_price_only"></string>
    <string name="card_stock_change"></string>
    <string name="card_image_button_desc">View Stock Details</string>

    <!-- Details Stock View Stock -->
    <string name="details_title_stock_quote">Stock Quote</string>
    <string name="details_title_stock_news">Recent News</string>
    <string name="details_title_buy">Purchase Stock</string>
    <string name="details_stock_name">Google Inc.</string>
    <string name="details_stock_symbol">GOOG</string>
    <string name="details_stock_exchange">NASDAQ</string>
    <string name="details_stock_last_trade_price_only">Last Trade Price: </string>
    <string name="details_stock_change">Change: </string>
    <string name="details_stock_days_low">Days Low: </string>
    <string name="details_stock_days_high">Days High: </string>
    <string name="details_stock_year_low">Year Low: </string>
    <string name="details_stock_year_high">Year High: </string>

    <!-- Details Stock View News -->
    <string name="details_title">Title: </string>
    <string name="details_content">Content: </string>
    <string name="details_news_URL">URL: </string>
    <string name="details_publisher">Publisher: </string>
    <string name="details_published_date">Published Date: </string>

    <!-- Details Buy Section -->
    <string name="details_stock_buy_button">Buy</string>
    <string name="details_stock_user_cash">Money Remaining: </string>
    <string name="details_stock_amount_to_buy">Stocks to buy: </string>
	
    <!-- Purchase Dialog -->
    <string name="purchase_dialog_title">Order Summary</string>
    <string name="purchase_dialog_positive_button">Buy</string>
    <string name="purchase_dialog_negative_button">Cancel</string>
    <string name="purchase_dialog_title_item">Item</string>
    <string name="purchase_dialog_info_volume">Volume:</string>
    <string name="purchase_dialog_title_amount">Amount</string>
    <string name="purchase_dialog_info_total">Total</string>
    <string name="purchase_dialog_info_user_bank">Balance</string>
    <string name="purchase_dialog_info_broker_fee">Broker Fee</string>
    <string name="purchase_dialog_info_tax">Tax</string>
    <string name="purchase_dialog_info_quantity">Quantity:</string>
    <string name="purchase_dialog_info_item_price">Unit Price:</string>
    <string name="purchase_dialog_info_name">Name:</string>
    <string name="purchase_dialog_info_symbol">Symbol:</string>
    
    <!-- Sell Dialog -->
    <string name="sell_dialog_title">Sell Projections</string>
    <string name="sell_dialog_text_sell">Sell</string>
    <string name="sell_dialog_text_cancel">Cancel</string>
    <string name="sell_dialog_text_quantity">Remaining Stocks:</string>
    <string name="sell_dialog_text_name">Name:</string>
    <string name="sell_dialog_text_symbol">Symbol:</string>
    <string name="sell_dialog_text_balance">Current Balance:</string>
    <string name="sell_dialog_text_unit_price">Unit Price:</string>
    <string name="sell_dialog_text_updated_balance">Updated Balance:</string>
     
    
    <!-- My Accounts Page -->
    <string name="account_username">Username</string>
    <string name="account_starting_capital">Starting Capital</string>
    <string name="account_current_capital">Current Balance</string>
    <string name="account_current_stock_value">Current Stock Value</string>
    <string name="account_gain_loss">Gain/Loss</string>
    <string name="account_stocks_bought">Stocks Bought</string>
    <string name="account_stocks_owned">Stocks Owned</string>
    <string name="account_total_transactions">Total Transactions</string>
    <string name="account_positive_transactions">Positive Transactions</string>
    <string name="account_negative_transactions">Negative Transactions</string>
    <string name="account_delete_button">Delete Account</string>
    
    <!-- Stock list -->
    <string name="stocklist_refresh">Refresh</string>
    
    <!-- Extra stuff -->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, 
        consectetur adipiscing elit. Maecenas a nunc at magna dictum congue. Etiam est tellus, scelerisque ut leo vitae, fringilla laoreet diam. 
        Donec at vulputate felis, et placerat felis. Integer bibendum malesuada velit nec rhoncus. Suspendisse sodales, libero eu laoreet volutpat, 
        velit est gravida enim, nec placerat nisl sapien in sapien. Sed scelerisque nisi et elementum ultrices. Vivamus dignissim, dui feugiat pharetra 
        rutrum, risus lorem blandit nunc, vel pretium massa arcu quis dui. Duis interdum neque id tortor cursus, vitae volutpat sapien dictum. 
        Nullam lorem nisi, laoreet at ipsum vel, dapibus consectetur odio. Ut condimentum sodales mi, id mollis nibh ornare eu. 
        Proin volutpat at libero ut pharetra.</string>

</resources>