<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_horizontal_margin" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/detailsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_title_padding_top"
            android:text="@string/details_stock_name"
            android:textSize="@dimen/details_important"
            android:textStyle="bold" />

        <View
            android:layout_width="4dp"
            android:layout_height="0dip" >
        </View>

        <TextView
            android:id="@+id/detailsSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_title_padding_top"
            android:fontFamily="sans-serif-thin"
            android:text="@string/details_stock_symbol"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="@dimen/details_fine_information" />

        <View
            android:layout_width="4dp"
            android:layout_height="0dip"
            android:layout_weight="1" >
        </View>

        <TextView
            android:id="@+id/detailsExchange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_title_padding_top"
            android:text="@string/details_stock_exchange"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/details_secondary_info" />

        <View
            android:layout_width="4dp"
            android:layout_height="0dip" />

        <ImageButton
            android:id="@+id/detailsBuyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_action_new" />
    </TableRow>

    <View
        android:layout_width="0dp"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_view_as_list" />

            <View
                android:layout_width="4dp"
                android:layout_height="0dip" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/details_subtitle_padding_top"
                android:text="@string/details_title_stock_quote"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/secondary_text_color"
                android:textSize="@dimen/details_subtitle_size" />
        </TableRow>

        <View
            android:layout_width="0dp"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/detailsLastTradePriceOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/details_info_margin_left"
            android:paddingBottom="@dimen/details_fine_information_spacing"
            android:text="@string/details_stock_last_trade_price_only"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/details_fine_information" />

        <TextView
            android:id="@+id/detailsChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/details_info_margin_left"
            android:paddingBottom="@dimen/details_fine_information_spacing"
            android:text="@string/details_stock_change"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/details_fine_information" />

        <TextView
            android:id="@+id/detailsDaysHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/details_info_margin_left"
            android:paddingBottom="@dimen/details_fine_information_spacing"
            android:text="@string/details_stock_days_high"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/details_fine_information" />

        <TextView
            android:id="@+id/detailsDaysLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/details_info_margin_left"
            android:paddingBottom="@dimen/details_fine_information_spacing"
            android:text="@string/details_stock_days_low"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/details_fine_information" />

        <TextView
            android:id="@+id/detailsYearHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/details_info_margin_left"
            android:paddingBottom="@dimen/details_fine_information_spacing"
            android:text="@string/details_stock_year_high"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/details_fine_information" />

        <TextView
            android:id="@+id/detailsYearLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/details_info_margin_left"
            android:paddingBottom="@dimen/details_fine_information_spacing"
            android:text="@string/details_stock_year_low"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/details_fine_information" />
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="10dp" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableRow
                android:id="@+id/TableRow01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/ImageView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_web_site" />

                <View
                    android:layout_width="4dp"
                    android:layout_height="0dip" />

                <TextView
                    android:id="@+id/TextView06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/details_subtitle_padding_top"
                    android:text="@string/details_title_stock_news"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="@dimen/details_subtitle_size" />
            </TableRow>

            <View
                android:layout_width="0dp"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/detailsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/details_info_margin_left"
                android:paddingBottom="@dimen/details_fine_information_spacing"
                android:text="@string/details_title"
                android:textColor="@color/secondary_text_color"
                android:textSize="@dimen/details_fine_information" />

            <TextView
                android:id="@+id/detailsContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/details_info_margin_left"
                android:paddingBottom="@dimen/details_fine_information_spacing"
                android:text="@string/details_content"
                android:textColor="@color/secondary_text_color"
                android:textSize="@dimen/details_fine_information" />

            <TextView
                android:id="@+id/detailsPublisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/details_info_margin_left"
                android:paddingBottom="@dimen/details_fine_information_spacing"
                android:text="@string/details_publisher"
                android:textColor="@color/secondary_text_color"
                android:textSize="@dimen/details_fine_information" />

            <TextView
                android:id="@+id/detailsPublishedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/details_info_margin_left"
                android:paddingBottom="@dimen/details_fine_information_spacing"
                android:text="@string/details_published_date"
                android:textColor="@color/secondary_text_color"
                android:textSize="@dimen/details_fine_information" />
        </LinearLayout>
    </ScrollView>

</TableLayout>