<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_horizontal_margin" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_stock_name"
            android:textSize="@dimen/details_important" />

        <View
            android:layout_width="4dp"
            android:layout_height="0dip" >
        </View>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/card_stock_symbol"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="@dimen/details_secondary_info" />

        <View
            android:layout_width="4dp"
            android:layout_height="0dip"
            android:layout_weight="1" >
        </View>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_stock_exchange"
            android:textSize="@dimen/details_secondary_info" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <View
            android:layout_width="4dp"
            android:layout_height="10dp"
            android:layout_weight="1" >
        </View>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_stock_last_trade_price_only"
                android:textSize="@dimen/details_fine_information" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_stock_change"
                android:textSize="@dimen/details_fine_information" />

        </LinearLayout>

    </TableRow>

</LinearLayout>