<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardTableRow"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/card_background"
    android:orientation="horizontal"
    android:padding="10dp" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="3" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0" >

            <TextView
                android:id="@+id/cardStockName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_stock_name"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/card_highlight"
                android:textSize="@dimen/card_important"
                android:textStyle="bold" />

            <View
                android:layout_width="4dp"
                android:layout_height="0dip" >
            </View>

            <TextView
                android:id="@+id/stockSymbolEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/card_stock_symbol"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="@dimen/card_secondard_info" />

            <View
                android:layout_width="4dp"
                android:layout_height="0dip"
                android:layout_weight="1" >
            </View>

            <TextView
                android:id="@+id/detailsSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_stock_last_trade_price_only"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/card_highlight"
                android:textSize="@dimen/card_important"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="0dip" >
            </View>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/detailsLastTradePriceOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_stock_exchange"
                android:textSize="@dimen/card_secondard_info" />

            <View
                android:layout_width="4dp"
                android:layout_height="0dip"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/detailsChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_stock_change"
                android:textColor="@color/card_color_negative"
                android:textSize="@dimen/card_secondard_info" />
        </TableRow>
    </TableLayout>

    <ImageButton
        android:id="@+id/stockDetailsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@null"
        android:contentDescription="@string/card_image_button_desc"
        android:paddingBottom="0dp"
        android:paddingLeft="7dp"
        android:paddingRight="2dp"
        android:paddingTop="0dp"
        android:src="@drawable/ic_action_next_item" />

</TableRow>