<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_horizontal_margin" >

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"  />

    <EditText
        android:id="@+id/signupUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signup_username"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>
    
    <View
        android:layout_width="1dp"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/signupStartingCash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signup_starting_cash"
        android:inputType="number" >
    </EditText>
    
    <View
        android:layout_width="1dp"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/userSetupComplete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_color"
        android:text="@string/signup_setup_complete"
        android:textColor="@color/main_text_color" />
    
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2" />

</LinearLayout>